#9 Updated enums CheckoutState, ReturnType, ContactAction, ContactSourceType

--- a/docs/api-reference/CRMScript.NetServer.NSCheckoutInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCheckoutInfo.yml
@@ -91,7 +91,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Checkout state
+      description: The checkout state. See <xref href=\"CRMScript.NetServer.CheckoutState\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSCheckoutInfo thing;\nInteger state = thing.GetState();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCheckoutInfo.SetAssociateId(Integer)
@@ -155,7 +155,7 @@ items:
     parameters:
     - id: state
       type: CRMScript.Global.Integer
-      description: Checkout state. See enum Checkoutstate.
+      description: Checkout state. See <xref href=\"CRMScript.NetServer.CheckoutState\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -185,3 +185,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.CheckoutState
+  commentId: T:CRMScript.NetServer.CheckoutState
+  isExternal: true
+  name: CheckoutState
+  nameWithType: CheckoutState
+  fullName: CRMScript.NetServer.CheckoutState
