--- a/docs/api-reference/CRMScript.NetServer.NSCommandInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCommandInfo.yml
@@ -135,7 +135,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Declaration of what kind of return type the execution of this command will give.
+      description: Declaration of what kind of return type the execution of this command will give. See <xref href=\"CRMScript.NetServer.ReturnType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSCommandInfo thing;\nInteger returnType = thing.GetReturnType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCommandInfo.SetDisplayName(String)
@@ -243,7 +243,7 @@ items:
     parameters:
     - id: returnType
       type: CRMScript.Global.Integer
-      description: Declaration of what kind of return type the execution of this command will give. See enum ReturnType.
+      description: Declaration of what kind of return type the execution of this command will give. See <xref href=\"CRMScript.NetServer.ReturnType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -273,3 +273,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.ReturnType
+  commentId: T:CRMScript.NetServer.ReturnType
+  isExternal: true
+  name: ReturnType
+  nameWithType: ReturnType
+  fullName: CRMScript.NetServer.ReturnType
