--- a/docs/api-reference/CRMScript.NetServer.NSContactActivity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactActivity.yml
@@ -73,7 +73,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The activity that has occurred on this contact.
+      description: The activity that has occurred on this contact. See <xref href=\"CRMScript.NetServer.ContactAction\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSContactActivity thing;\nInteger action = thing.GetAction();</code></pre>\n"
 - uid: CRMScript.NetServer.NSContactActivity.GetActionId()
@@ -353,7 +353,7 @@ items:
     parameters:
     - id: action
       type: CRMScript.Global.Integer
-      description: The activity that has occurred on this contact. See enum actionType.
+      description: The activity that has occurred on this contact. See <xref href=\"CRMScript.NetServer.ContactAction\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -675,3 +675,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.ContactAction
+  commentId: T:CRMScript.NetServer.ContactAction
+  isExternal: true
+  name: ContactAction
+  nameWithType: ContactAction
+  fullName: CRMScript.NetServer.ContactAction
