--- a/docs/api-reference/CRMScript.NetServer.NSPersonAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPersonAgent.yml
@@ -528,13 +528,13 @@ items:
   fullName: CRMScript.NetServer.NSPersonAgent.GetColleaguesBySource(Integer,Integer)
   type: Method
   summary: "\nGets the persons working in the same company as the logged-on user. The list of persons could be retrieved from the history list, the diary view list, or from all sources.<p></p>\n<strong>Returns:</strong>NSPerson[]\n"
-  remarks: "\n<p>See enum sourceType.</p>\n"
+  remarks:  
   syntax: 
     content: NSPerson[] GetColleaguesBySource(Integer sourceType, Integer count)
     parameters:
     - id: sourceType
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"CRMScript.NetServer.ContactSourceType\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: count
       type: CRMScript.Global.Integer
       description: 
@@ -1433,3 +1433,9 @@ references:
   name: StringDictionary
   nameWithType: StringDictionary
   fullName: CRMScript.Global.StringDictionary
+- uid: CRMScript.NetServer.ContactSourceType
+  commentId: T:CRMScript.NetServer.ContactSourceType
+  isExternal: true
+  name: ContactSourceType
+  nameWithType: ContactSourceType
+  fullName: CRMScript.NetServer.ContactSourceType
