--- a/docs/api-reference/CRMScript.NetServer.NSReturnInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReturnInfo.yml
@@ -93,13 +93,14 @@ items:
   nameWithType: NSReturnInfo.GetType()
   fullName: CRMScript.NetServer.NSReturnInfo.GetType()
   type: Method
-  summary: "\nHow is the return value to be understood by the caller<p></p>\n<strong>Returns:</strong>Integer\n"
+  summary: "\nHow is the return value to be understood by the caller\n"
   remarks: 
   syntax: 
     content: Integer GetType()
     parameters:
     return:
       type: CRMScript.Global.Integer
+      description: See <xref href=\"CRMScript.NetServer.ReturnType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSReturnInfo thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSReturnInfo.GetValue()
@@ -226,13 +227,13 @@ items:
   fullName: CRMScript.NetServer.NSReturnInfo.SetType(Integer)
   type: Method
   summary: "\nHow is the return value to be understood by the caller\n"
-  remarks: "\n<p>See enum ReturnType.</p>\n"
+  remarks: 
   syntax: 
     content: SetType(Integer type)
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"CRMScript.NetServer.ReturnType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSReturnInfo thing;\nInteger type;\nthing.SetType(type);</code></pre>\n"
 - uid: CRMScript.NetServer.NSReturnInfo.SetValue(String)
@@ -300,3 +301,9 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
+- uid: CRMScript.NetServer.ReturnType
+  commentId: T:CRMScript.NetServer.ReturnType
+  isExternal: true
+  name: ReturnType
+  nameWithType: ReturnType
+  fullName: CRMScript.NetServer.ReturnType
