--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -9,7 +9,6 @@ items:
   - CRMScript.NetServer.access
   - CRMScript.NetServer.accessFlags
   - CRMScript.NetServer.action
-  - CRMScript.NetServer.actionType
   - CRMScript.NetServer.active
   - CRMScript.NetServer.ActivityStatus
   - CRMScript.NetServer.actorType
@@ -34,10 +33,12 @@ items:
   - CRMScript.NetServer.ChatSessionStatus
   - CRMScript.NetServer.ChatWidgetSize
   - CRMScript.NetServer.checkEscalating
-  - CRMScript.NetServer.Checkoutstate
+  - CRMScript.NetServer.CheckoutState
   - CRMScript.NetServer.children
   - CRMScript.NetServer.closingStatus
   - CRMScript.NetServer.colorIndex
+  - CRMScript.NetServer.ContactAction
+  - CRMScript.NetServer.ContactSourceType
   - CRMScript.NetServer.copyMembers
   - CRMScript.NetServer.countryId
   - CRMScript.NetServer.crmActorType
@@ -601,7 +602,6 @@ items:
   - CRMScript.NetServer.singleWordOperator
   - CRMScript.NetServer.slevel
   - CRMScript.NetServer.source
-  - CRMScript.NetServer.sourceType
   - CRMScript.NetServer.state
   - CRMScript.NetServer.status
   - CRMScript.NetServer.statusFilter
@@ -1126,12 +1126,12 @@ references:
   name: NSCheckoutInfo
   nameWithType: NSCheckoutInfo
   fullName: CRMScript.NetServer.NSCheckoutInfo
-- uid: CRMScript.NetServer.Checkoutstate
-  commentId: T:CRMScript.NetServer.Checkoutstate
+- uid: CRMScript.NetServer.CheckoutState
+  commentId: T:CRMScript.NetServer.CheckoutState
   isExternal: true
-  name: Checkoutstate
-  nameWithType: Checkoutstate
-  fullName: CRMScript.NetServer.Checkoutstate
+  name: CheckoutState
+  nameWithType: CheckoutState
+  fullName: CRMScript.NetServer.CheckoutState
 - uid: CRMScript.NetServer.NSCommandInfo
   commentId: T:CRMScript.NetServer.NSCommandInfo
   isExternal: true
@@ -1192,24 +1192,24 @@ references:
   name: NSContactActivity
   nameWithType: NSContactActivity
   fullName: CRMScript.NetServer.NSContactActivity
-- uid: CRMScript.NetServer.actionType
-  commentId: T:CRMScript.NetServer.actionType
+- uid: CRMScript.NetServer.ContactAction
+  commentId: T:CRMScript.NetServer.ContactAction
   isExternal: true
-  name: actionType
-  nameWithType: actionType
-  fullName: CRMScript.NetServer.actionType
+  name: ContactAction
+  nameWithType: ContactAction
+  fullName: CRMScript.NetServer.ContactAction
 - uid: CRMScript.NetServer.NSContactAgent
   commentId: T:CRMScript.NetServer.NSContactAgent
   isExternal: true
   name: NSContactAgent
   nameWithType: NSContactAgent
   fullName: CRMScript.NetServer.NSContactAgent
-- uid: CRMScript.NetServer.sourceType
-  commentId: T:CRMScript.NetServer.sourceType
+- uid: CRMScript.NetServer.ContactSourceType
+  commentId: T:CRMScript.NetServer.ContactSourceType
   isExternal: true
-  name: sourceType
-  nameWithType: sourceType
-  fullName: CRMScript.NetServer.sourceType
+  name: ContactSourceType
+  nameWithType: ContactSourceType
+  fullName: CRMScript.NetServer.ContactSourceType
 - uid: CRMScript.NetServer.countryId
   commentId: T:CRMScript.NetServer.countryId
   isExternal: true
