--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -1112,8 +1112,6 @@ items:
       href: CRMScript.NetServer.accessFlags.yml
     - name: Enum action
       href: CRMScript.NetServer.action.yml
-    - name: Enum actionType
-      href: CRMScript.NetServer.actionType.yml
     - name: Enum active
       href: CRMScript.NetServer.active.yml
     - name: ActivityStatus
@@ -1162,14 +1160,18 @@ items:
       href: CRMScript.NetServer.ChatWidgetSize.yml
     - name: Enum checkEscalating
       href: CRMScript.NetServer.checkEscalating.yml
-    - name: Enum Checkoutstate
-      href: CRMScript.NetServer.Checkoutstate.yml
+    - name: CheckoutState
+      href: CRMScript.NetServer.CheckoutState.yml
     - name: Enum children
       href: CRMScript.NetServer.children.yml
     - name: Enum closingStatus
       href: CRMScript.NetServer.closingStatus.yml
     - name: Enum colorIndex
       href: CRMScript.NetServer.colorIndex.yml
+    - name: ContactAction
+      href: CRMScript.NetServer.ContactAction.yml
+    - name: ContactSourceType
+      href: CRMScript.NetServer.ContactSourceType.yml
     - name: Enum copyMembers
       href: CRMScript.NetServer.copyMembers.yml
     - name: Enum countryId
@@ -1302,7 +1304,7 @@ items:
       href: CRMScript.NetServer.reportLayout.yml
     - name: Enum returnRowStatus
       href: CRMScript.NetServer.returnRowStatus.yml
-    - name: Enum ReturnType
+    - name: ReturnType
       href: CRMScript.NetServer.ReturnType.yml
     - name: Enum roleType
       href: CRMScript.NetServer.roleType.yml
@@ -1332,8 +1334,6 @@ items:
       href: CRMScript.NetServer.slevel.yml
     - name: Enum source
       href: CRMScript.NetServer.source.yml
-    - name: Enum sourceType
-      href: CRMScript.NetServer.sourceType.yml
     - name: Enum state
       href: CRMScript.NetServer.state.yml
     - name: Enum status
