--- a/docs/api-reference/CRMScript.NetServer.Checkoutstate.yml
+++ b/docs/api-reference/CRMScript.NetServer.Checkoutstate.yml
@@ -1,76 +1,77 @@
 ### YamlMime:ManagedReference
 items:
-- uid: CRMScript.NetServer.Checkoutstate
-  commentId: T:CRMScript.NetServer.Checkoutstate
-  id: Checkoutstate
+- uid: CRMScript.NetServer.CheckoutState
+  # Same as SuperOffice.CRM.Documents.CheckoutState
+  commentId: T:CRMScript.NetServer.CheckoutState
+  id: CheckoutState
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.Checkoutstate.NotCheckedOut
-  - CRMScript.NetServer.Checkoutstate.CheckedOutOwn
-  - CRMScript.NetServer.Checkoutstate.CheckedOutOther
-  - CRMScript.NetServer.Checkoutstate.LockingNotSupported
-  name: Checkoutstate
-  nameWithType: Checkoutstate
-  fullName: CRMScript.NetServer.Checkoutstate
+  - CRMScript.NetServer.CheckoutState.NotCheckedOut
+  - CRMScript.NetServer.CheckoutState.CheckedOutOwn
+  - CRMScript.NetServer.CheckoutState.CheckedOutOther
+  - CRMScript.NetServer.CheckoutState.LockingNotSupported
+  name: CheckoutState
+  nameWithType: CheckoutState
+  fullName: CRMScript.NetServer.CheckoutState
   type: Enum
-  summary: 
-- uid: CRMScript.NetServer.Checkoutstate.NotCheckedOut
-  commentId: F:CRMScript.NetServer.Checkoutstate.NotCheckedOut
-  id: Checkoutstate.NotCheckedOut
+  summary: "\nEnum listing the possible checkout states of a document, as seen from outside the document plugin\n"
+- uid: CRMScript.NetServer.CheckoutState.NotCheckedOut
+  commentId: F:CRMScript.NetServer.CheckoutState.NotCheckedOut
+  id: CheckoutState.NotCheckedOut
   langs:
   - crmscript
-  name: Checkoutstate.NotCheckedOut
-  nameWithType: Checkoutstate.NotCheckedOut
-  fullName: CRMScript.NetServer.Checkoutstate.NotCheckedOut
+  name: CheckoutState.NotCheckedOut
+  nameWithType: CheckoutState.NotCheckedOut
+  fullName: CRMScript.NetServer.CheckoutState.NotCheckedOut
   type: Field
-  summary: "\n0: NotCheckedOut\n"
+  summary: "\n0: Document is not checked out\n"
   syntax: 
     content: NotCheckedOut = 0
-    type: CRMScript.NetServer.Checkoutstate
-- uid: CRMScript.NetServer.Checkoutstate.CheckedOutOwn
-  commentId: F:CRMScript.NetServer.Checkoutstate.CheckedOutOwn
-  id: Checkoutstate.CheckedOutOwn
+    type: CRMScript.NetServer.CheckoutState
+- uid: CRMScript.NetServer.CheckoutState.CheckedOutOwn
+  commentId: F:CRMScript.NetServer.CheckoutState.CheckedOutOwn
+  id: CheckoutState.CheckedOutOwn
   langs:
   - crmscript
-  name: Checkoutstate.CheckedOutOwn
-  nameWithType: Checkoutstate.CheckedOutOwn
-  fullName: CRMScript.NetServer.Checkoutstate.CheckedOutOwn
+  name: CheckoutState.CheckedOutOwn
+  nameWithType: CheckoutState.CheckedOutOwn
+  fullName: CRMScript.NetServer.CheckoutState.CheckedOutOwn
   type: Field
-  summary: "\n1: CheckedOutOwn\n"
+  summary: "\n1: Document is checked out, to the user making the query\n"
   syntax: 
     content: CheckedOutOwn = 1
-    type: CRMScript.NetServer.Checkoutstate
-- uid: CRMScript.NetServer.Checkoutstate.CheckedOutOther
-  commentId: F:CRMScript.NetServer.Checkoutstate.CheckedOutOther
-  id: Checkoutstate.CheckedOutOther
+    type: CRMScript.NetServer.CheckoutState
+- uid: CRMScript.NetServer.CheckoutState.CheckedOutOther
+  commentId: F:CRMScript.NetServer.CheckoutState.CheckedOutOther
+  id: CheckoutState.CheckedOutOther
   langs:
   - crmscript
-  name: Checkoutstate.CheckedOutOther
-  nameWithType: Checkoutstate.CheckedOutOther
-  fullName: CRMScript.NetServer.Checkoutstate.CheckedOutOther
+  name: CheckoutState.CheckedOutOther
+  nameWithType: CheckoutState.CheckedOutOther
+  fullName: CRMScript.NetServer.CheckoutState.CheckedOutOther
   type: Field
-  summary: "\n2: CheckedOutOther\n"
+  summary: "\n2: Document is checked out, to a user different from the one making the query\n"
   syntax: 
     content: CheckedOutOther = 2
-    type: CRMScript.NetServer.Checkoutstate
-- uid: CRMScript.NetServer.Checkoutstate.LockingNotSupported
-  commentId: F:CRMScript.NetServer.Checkoutstate.LockingNotSupported
-  id: Checkoutstate.LockingNotSupported
+    type: CRMScript.NetServer.CheckoutState
+- uid: CRMScript.NetServer.CheckoutState.LockingNotSupported
+  commentId: F:CRMScript.NetServer.CheckoutState.LockingNotSupported
+  id: CheckoutState.LockingNotSupported
   langs:
   - crmscript
-  name: Checkoutstate.LockingNotSupported
-  nameWithType: Checkoutstate.LockingNotSupported
-  fullName: CRMScript.NetServer.Checkoutstate.LockingNotSupported
+  name: CheckoutState.LockingNotSupported
+  nameWithType: CheckoutState.LockingNotSupported
+  fullName: CRMScript.NetServer.CheckoutState.LockingNotSupported
   type: Field
-  summary: "\n3: LockingNotSupported\n"
+  summary: "\n3: Locking is not supported or selected for this document. The document is always writeable in the sense of not being protected by any locks. The document may still be read-only due to Sentry constraints.\n"
   syntax: 
     content: LockingNotSupported = 3
-    type: CRMScript.NetServer.Checkoutstate
+    type: CRMScript.NetServer.CheckoutState
 references:
-- uid: CRMScript.NetServer.Checkoutstate
-  commentId: T:CRMScript.NetServer.Checkoutstate
+- uid: CRMScript.NetServer.CheckoutState
+  commentId: T:CRMScript.NetServer.CheckoutState
   isExternal: true
-  name: Checkoutstate
-  nameWithType: Checkoutstate
-  fullName: CRMScript.NetServer.Checkoutstate
+  name: CheckoutState
+  nameWithType: CheckoutState
+  fullName: CRMScript.NetServer.CheckoutState
